# VidyaMitra_AI_EdTech

./: .env.example  .gitignore  ANTIGRAVITY_PROMPT.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  ai-cost-optimization-flow.mermaid  architecture-diagram.mermaid  docker-compose.yml
backend/: Dockerfile  _fix_enums.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/middleware/: audit_logger.py  rate_limiter.py
backend/app/models/: __init__.py  ai.py  assessment.py  attendance.py  base.py  content.py  notification.py  payment.py  school.py  syllabus.py  user.py
backend/app/providers/notification/: __init__.py  base.py  mock.py  whatsapp.py
backend/app/routers/: admin.py  ai.py  auth.py  health.py  parents.py  students.py  superadmin.py  syllabus.py  teachers.py
backend/app/schemas/: ai.py  assessment.py  auth.py  common.py  syllabus.py  user.py
backend/app/scripts/: seed_dev_users.py  seed_syllabus.py
backend/app/services/: admin_service.py  ai_service.py  auth_service.py  claude_service.py  embedding_service.py  notification_service.py  parent_service.py  payment_service.py  progress_service.py  report_service.py  superadmin_service.py  syllabus_service.py  teacher_service.py  user_service.py
backend/app/utils/: __init__.py  safety.py
backend/tests/: conftest.py  test_admin_superadmin.py  test_ai_cache.py  test_auth.py  test_payment_webhook.py  test_rbac.py  test_teacher_parent.py
docs/: LOCAL_SETUP.md  (+3 more)
(+67 files in other folders)
