[project]
name = "vidyamitra-backend"
version = "0.1.0"
description = "VidyaMitra AI EdTech Platform — Core Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    
    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    
    # Cache
    "redis[hiredis]>=5.2.0",
    
    # HTTP client (for external APIs)
    "httpx>=0.28.0",
    
    # AI
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    
    # Utils
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
